[package]
name = "inwx"
version = "0.0.3"
authors = ["Urs Schulz <github@ursschulz.de>"]
license = "AGPL-3.0"
description = "A tiny inwx domrobot API binding entirely written in Rust"
repository = "https://github.com/faulesocke/inwx-rs"

[dependencies]
xmlrpc = "0.11.1"
reqwest = "0.8.0"

[dev-dependencies]
igd = "0.7.0"
toml = "0.4.6"
serde = "1.0"
serde_derive = "1.0"
