[package]
name = "inwx"
version = "0.1.0"
authors = ["Urs Schulz <github@ursschulz.de>"]
license = "AGPL-3.0"
description = "A tiny inwx domrobot API binding entirely written in Rust"
repository = "https://gitlab.com/faulesocke/inwx-rs"
documentation = "https://docs.rs/inwx/"
edition = "2018"

[badges]
gitlab = { repository = "faulesocke/inwx-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
xmlrpc = "0.13"
reqwest = "0.9"

[dev-dependencies]
igd = "0.8"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
