[package]
name = "inwx"
version = "0.0.3"
authors = ["Urs Schulz <github@ursschulz.de>"]
license = "AGPL-3.0"
description = "A tiny inwx domrobot API binding entirely written in Rust"
repository = "https://github.com/faulesocke/inwx-rs"
edition = "2018"

[dependencies]
xmlrpc = "0.13"
reqwest = "0.9"

[dev-dependencies]
igd = "0.8"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
